# app/Http/Controllers/ReviewController.php
@@ -15,9 +15,10 @@ class ReviewController extends Controller
     public function index(Request $request)
     {   
         // Acho que é com get
-        return Review::where('item_id', "=", $request->input("item_id"))->lists('user_id', 'rating', 'description');
+        return Review::where('item_id', "=", $request->input("item_id"))->get();
     }
 
+    
     /**
      * Show the form for creating a new resource.
      *
